# HjulmundEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Documentation/: Architecture.md  DevelopmentRoadmap.md
Engine/Source/Hjulmund/Core/: Assert.cpp  Assert.hpp  Event.cpp  Event.hpp  Logger.cpp  Logger.hpp  Time.cpp  Time.hpp
Engine/Source/Hjulmund/Math/: Matrix.hpp  Vector.hpp
Engine/Source/Hjulmund/Platform/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
Engine/Source/Hjulmund/Runtime/: Application.cpp  Application.hpp
Engine/Source/Hjulmund/Scene/: Camera.cpp  Camera.hpp
Tests/: CMakeLists.txt
Tests/Core/: LoggerTests.cpp  TimeTests.cpp
Tests/Math/: VectorTests.cpp
Tests/Platform/: EventInputTests.cpp
Tests/Runtime/: ApplicationTests.cpp
Tests/Scene/: CameraTests.cpp
